try to fix tech logos on safari

--- a/src/components/tech-logos.module.scss
+++ b/src/components/tech-logos.module.scss
@@ -6,7 +6,6 @@
     > a {
         display: flex;
         > img {
-            width: 10rem;
             margin: 1rem;
         }
     }
